--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <meta name="twitter:site" content="@possiblerust" />
 <meta name="twitter:creator" content="@alilleybrinker" />
 <script type="application/ld+json">
-{"headline":"Possible Rust","sameAs":["https://twitter.com/PossibleRust"],"url":"https://possiblerust.com/","description":"A blog about what’s possible in Rust.","@type":"WebSite","name":"PossibleRust","@context":"https://schema.org"}</script>
+{"url":"https://possiblerust.com/","description":"A blog about what’s possible in Rust.","sameAs":["https://twitter.com/PossibleRust"],"headline":"Possible Rust","@type":"WebSite","name":"PossibleRust","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     </head>
