--- a/unpacking/index.html
+++ b/unpacking/index.html
@@ -35,7 +35,7 @@
 <meta name="twitter:site" content="@possiblerust" />
 <meta name="twitter:creator" content="@alilleybrinker" />
 <script type="application/ld+json">
-{"headline":"Unpacking","url":"https://possiblerust.com/unpacking/","description":"A blog about what’s possible in Rust.","@type":"WebPage","@context":"https://schema.org"}</script>
+{"url":"https://possiblerust.com/unpacking/","description":"A blog about what’s possible in Rust.","headline":"Unpacking","@type":"WebPage","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     </head>
