--- a/meta/index.html
+++ b/meta/index.html
@@ -35,7 +35,7 @@
 <meta name="twitter:site" content="@possiblerust" />
 <meta name="twitter:creator" content="@alilleybrinker" />
 <script type="application/ld+json">
-{"url":"https://possiblerust.com/meta/","description":"A blog about what’s possible in Rust.","headline":"Meta","@type":"WebPage","@context":"https://schema.org"}</script>
+{"headline":"Meta","url":"https://possiblerust.com/meta/","description":"A blog about what’s possible in Rust.","@type":"WebPage","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     </head>
