--- a/about/index.html
+++ b/about/index.html
@@ -35,7 +35,7 @@
 <meta name="twitter:site" content="@possiblerust" />
 <meta name="twitter:creator" content="@alilleybrinker" />
 <script type="application/ld+json">
-{"url":"https://possiblerust.com/about/","description":"A blog about what’s possible in Rust.","sameAs":["https://twitter.com/PossibleRust"],"headline":"About","@type":"WebSite","name":"PossibleRust","@context":"https://schema.org"}</script>
+{"headline":"About","sameAs":["https://twitter.com/PossibleRust"],"url":"https://possiblerust.com/about/","description":"A blog about what’s possible in Rust.","@type":"WebSite","name":"PossibleRust","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     </head>
