--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
         <link rel="manifest" href="site.webmanifest">
         <link rel="apple-touch-icon" href="icon.png">
 
-        <link rel="stylesheet" href="/css/normalize.css">
-        <link rel="stylesheet" href="/css/inter.css">
         <link rel="stylesheet" href="/css/main.css">
-        <link rel="stylesheet" href="/css/highlight.css">
 
         <meta name="theme-color" content="#e4edf6">
 
@@ -31,15 +28,15 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="A blog about what’s possible in Rust." />
 <meta property="og:description" content="A blog about what’s possible in Rust." />
-<link rel="canonical" href="https://possiblerust.com/" />
-<meta property="og:url" content="https://possiblerust.com/" />
+<link rel="canonical" href="http://localhost:4000/" />
+<meta property="og:url" content="http://localhost:4000/" />
 <meta property="og:site_name" content="Possible Rust" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Possible Rust" />
 <meta name="twitter:site" content="@possiblerust" />
 <meta name="twitter:creator" content="@alilleybrinker" />
 <script type="application/ld+json">
-{"url":"https://possiblerust.com/","description":"A blog about what’s possible in Rust.","sameAs":["https://twitter.com/PossibleRust"],"headline":"Possible Rust","@type":"WebSite","name":"PossibleRust","@context":"https://schema.org"}</script>
+{"headline":"Possible Rust","sameAs":["https://twitter.com/PossibleRust"],"url":"http://localhost:4000/","description":"A blog about what’s possible in Rust.","@type":"WebSite","name":"PossibleRust","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     </head>
