--- a/colophon/index.html
+++ b/colophon/index.html
@@ -18,10 +18,7 @@
         <link rel="manifest" href="site.webmanifest">
         <link rel="apple-touch-icon" href="icon.png">
 
-        <link rel="stylesheet" href="/css/normalize.css">
-        <link rel="stylesheet" href="/css/inter.css">
         <link rel="stylesheet" href="/css/main.css">
-        <link rel="stylesheet" href="/css/highlight.css">
 
         <meta name="theme-color" content="#e4edf6">
 
@@ -31,15 +28,15 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="A blog about what’s possible in Rust." />
 <meta property="og:description" content="A blog about what’s possible in Rust." />
-<link rel="canonical" href="https://possiblerust.com/colophon/" />
-<meta property="og:url" content="https://possiblerust.com/colophon/" />
+<link rel="canonical" href="http://localhost:4000/colophon/" />
+<meta property="og:url" content="http://localhost:4000/colophon/" />
 <meta property="og:site_name" content="Possible Rust" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Colophon" />
 <meta name="twitter:site" content="@possiblerust" />
 <meta name="twitter:creator" content="@alilleybrinker" />
 <script type="application/ld+json">
-{"url":"https://possiblerust.com/colophon/","description":"A blog about what’s possible in Rust.","headline":"Colophon","@type":"WebPage","@context":"https://schema.org"}</script>
+{"headline":"Colophon","url":"http://localhost:4000/colophon/","description":"A blog about what’s possible in Rust.","@type":"WebPage","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     </head>
