--- a/pattern/rust-lints-you-may-not-know.html
+++ b/pattern/rust-lints-you-may-not-know.html
@@ -425,7 +425,7 @@ much.</p>
                 <section class="discuss-section">
                     <p><strong>Possible Rust</strong> succeeds when more people can join in learning about Rust! Please take a moment to share, <em>especially</em> if you have questions or if you disagree!</p>
 
-                    <a target="_blank" href="https://twitter.com/intent/tweet?text=http://localhost:4000/pattern/rust-lints-you-may-not-know" class="button button--block">Share on Twitter</a>
+                    <a target="_blank" href="https://twitter.com/intent/tweet?text=https://possiblerust.com/pattern/rust-lints-you-may-not-know" class="button button--block">Share on Twitter</a>
                 </section>
                 <section class="discuss-section flex">
                     
