--- a/colophon/index.html
+++ b/colophon/index.html
@@ -211,7 +211,7 @@ Feed</a>
                     <div class="page">
     <p>This site is built using Jekyll 4.0, the <code class="highlighter-rouge">jekyll-paginate</code> plugin, and the <code class="highlighter-rouge">jekyll-feed</code> plugin. It also makes use of the Linecons set from <a href="https://icomoon.io">Icomoon.io</a>.</p>
 
-<p>On Mac OS, iOS, and iPadOS, this site uses the “San Francisco” font family by Apple. On other devices it uses the “Inter” font-family, by Rasmus Andersson.</p>
+<p>The site uses no JavaScript at the moment, and the font is your local system’s font to keep load times fast.</p>
 
 </div>
 
