--- a/about/index.html
+++ b/about/index.html
@@ -28,15 +28,15 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Learning what’s possible in Rust." />
 <meta property="og:description" content="Learning what’s possible in Rust." />
-<link rel="canonical" href="http://localhost:4000/about/" />
-<meta property="og:url" content="http://localhost:4000/about/" />
+<link rel="canonical" href="https://www.possiblerust.com/about/" />
+<meta property="og:url" content="https://www.possiblerust.com/about/" />
 <meta property="og:site_name" content="Possible Rust" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="About" />
 <meta name="twitter:site" content="@possiblerust" />
 <meta name="twitter:creator" content="@alilleybrinker" />
 <script type="application/ld+json">
-{"url":"http://localhost:4000/about/","description":"Learning what’s possible in Rust.","headline":"About","sameAs":["https://twitter.com/PossibleRust"],"@type":"WebSite","name":"PossibleRust","@context":"https://schema.org"}</script>
+{"headline":"About","url":"https://www.possiblerust.com/about/","description":"Learning what’s possible in Rust.","sameAs":["https://twitter.com/PossibleRust"],"@type":"WebSite","name":"PossibleRust","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     </head>
