--- a/community/index.html
+++ b/community/index.html
@@ -28,15 +28,15 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Learning what’s possible in Rust." />
 <meta property="og:description" content="Learning what’s possible in Rust." />
-<link rel="canonical" href="http://localhost:4000/community/" />
-<meta property="og:url" content="http://localhost:4000/community/" />
+<link rel="canonical" href="https://www.possiblerust.com/community/" />
+<meta property="og:url" content="https://www.possiblerust.com/community/" />
 <meta property="og:site_name" content="Possible Rust" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Community" />
 <meta name="twitter:site" content="@possiblerust" />
 <meta name="twitter:creator" content="@alilleybrinker" />
 <script type="application/ld+json">
-{"url":"http://localhost:4000/community/","description":"Learning what’s possible in Rust.","headline":"Community","@type":"WebPage","@context":"https://schema.org"}</script>
+{"headline":"Community","url":"https://www.possiblerust.com/community/","description":"Learning what’s possible in Rust.","@type":"WebPage","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     </head>
