--- a/guide/index.html
+++ b/guide/index.html
@@ -37,7 +37,7 @@
 <meta name="twitter:site" content="@possiblerust" />
 <meta name="twitter:creator" content="@alilleybrinker" />
 <script type="application/ld+json">
-{"author":{"@type":"Person","name":"Andrew Lilley Brinker"},"headline":"Guides","url":"https://www.possiblerust.com/guide/","description":"Learning what’s possible in Rust.","@type":"WebPage","@context":"https://schema.org"}</script>
+{"author":{"@type":"Person","name":"Andrew Lilley Brinker"},"url":"https://www.possiblerust.com/guide/","description":"Learning what’s possible in Rust.","headline":"Guides","@type":"WebPage","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     </head>
