Added Reddit link to latest post

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <meta name="twitter:site" content="@possiblerust" />
 <meta name="twitter:creator" content="@alilleybrinker" />
 <script type="application/ld+json">
-{"author":{"@type":"Person","name":"Andrew Lilley Brinker"},"headline":"Possible Rust","url":"https://www.possiblerust.com/","description":"Learning what’s possible in Rust.","@type":"WebSite","sameAs":["https://twitter.com/PossibleRust"],"name":"PossibleRust","@context":"https://schema.org"}</script>
+{"headline":"Possible Rust","sameAs":["https://twitter.com/PossibleRust"],"author":{"@type":"Person","name":"Andrew Lilley Brinker"},"url":"https://www.possiblerust.com/","description":"Learning what’s possible in Rust.","@type":"WebSite","name":"PossibleRust","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     </head>
