--- a/thanks/index.html
+++ b/thanks/index.html
@@ -37,7 +37,7 @@
 <meta name="twitter:site" content="@possiblerust" />
 <meta name="twitter:creator" content="@alilleybrinker" />
 <script type="application/ld+json">
-{"author":{"@type":"Person","name":"Andrew Lilley Brinker"},"headline":"Thanks","url":"https://www.possiblerust.com/thanks/","description":"Learning what’s possible in Rust.","@type":"WebPage","@context":"https://schema.org"}</script>
+{"headline":"Thanks","author":{"@type":"Person","name":"Andrew Lilley Brinker"},"url":"https://www.possiblerust.com/thanks/","description":"Learning what’s possible in Rust.","@type":"WebPage","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     </head>
