New blog post on object safety

--- a/about/index.html
+++ b/about/index.html
@@ -37,7 +37,7 @@
 <meta name="twitter:site" content="@possiblerust" />
 <meta name="twitter:creator" content="@alilleybrinker" />
 <script type="application/ld+json">
-{"headline":"About","sameAs":["https://twitter.com/PossibleRust"],"author":{"@type":"Person","name":"Andrew Lilley Brinker"},"url":"https://www.possiblerust.com/about/","description":"Learning what’s possible in Rust.","@type":"WebSite","name":"PossibleRust","@context":"https://schema.org"}</script>
+{"author":{"@type":"Person","name":"Andrew Lilley Brinker"},"headline":"About","url":"https://www.possiblerust.com/about/","description":"Learning what’s possible in Rust.","@type":"WebSite","sameAs":["https://twitter.com/PossibleRust"],"name":"PossibleRust","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     </head>
@@ -218,7 +218,7 @@
                 </li>
             
                 <li class="tags-item">
-                    <a class="plain" href="/tags#trait-objects">#trait objects<span>1</span></a>
+                    <a class="plain" href="/tags#trait-objects">#trait objects<span>2</span></a>
                 </li>
             
                 <li class="tags-item">
