--- a/pattern/3-things-to-try-when-you-can-t-make-a-trait-object.html
+++ b/pattern/3-things-to-try-when-you-can-t-make-a-trait-object.html
@@ -535,7 +535,7 @@ use the trait object.</p>
 <span class="p">}</span>
 </code></pre></div></div>
 
-    <figcaption><span class="figure-opener">Code 2</span>  <a href="#code-2" class="figure-link"><span>↺</span></a></figcaption>
+    <figcaption><span class="figure-opener">Code 2</span> <p>Fixing our initial example using an enum representing the fields.</p> <a href="#code-2" class="figure-link"><span>↺</span></a></figcaption>
     <div id="skip-code-2"></div>
 </figure>
 
