--- a/glossary/index.html
+++ b/glossary/index.html
@@ -37,7 +37,7 @@
 <meta name="twitter:site" content="@possiblerust" />
 <meta name="twitter:creator" content="@alilleybrinker" />
 <script type="application/ld+json">
-{"author":{"@type":"Person","name":"Andrew Lilley Brinker"},"headline":"Glossary","url":"https://www.possiblerust.com/glossary/","description":"Learning what’s possible in Rust.","@type":"WebPage","@context":"https://schema.org"}</script>
+{"headline":"Glossary","author":{"@type":"Person","name":"Andrew Lilley Brinker"},"url":"https://www.possiblerust.com/glossary/","description":"Learning what’s possible in Rust.","@type":"WebPage","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     </head>
@@ -299,7 +299,7 @@ Rust terms which you can reference whenever you need to.</p>
 
 <p>This page is intended to be updated and grow over time, as new definitions are
 written or new terms become more widespread. It will also, where possible, link
-to posts elsewhere on the site which describe these terms in greater deapth. It
+to posts elsewhere on the site which describe these terms in greater depth. It
 <em>does not</em> link to any article which uses the terms, only to ones which explain
 the terms in a more complete way.</p>
 
