New post: Naming your lifetimes.

--- a/community/how-to-read-first-impression-posts.html
+++ b/community/how-to-read-first-impression-posts.html
@@ -246,6 +246,10 @@
                     <a class="plain" href="/tags#functions">#functions<span>1</span></a>
                 </li>
             
+                <li class="tags-item">
+                    <a class="plain" href="/tags#lifetimes">#lifetimes<span>1</span></a>
+                </li>
+            
         </ul>
 
         <a class="tags-footer" href="/tags">View all tags</a>
