--- a/thanks/index.html
+++ b/thanks/index.html
@@ -248,6 +248,10 @@
                     <a class="plain" href="/tags#lifetimes">#lifetimes<span>1</span></a>
                 </li>
             
+                <li class="tags-item">
+                    <a class="plain" href="/tags#types">#types<span>1</span></a>
+                </li>
+            
         </ul>
 
         <a class="tags-footer" href="/tags">View all tags</a>
