Small correction to last post.

--- a/glossary/index.html
+++ b/glossary/index.html
@@ -37,7 +37,7 @@
 <meta name="twitter:site" content="@possiblerust" />
 <meta name="twitter:creator" content="@alilleybrinker" />
 <script type="application/ld+json">
-{"headline":"Glossary","author":{"@type":"Person","name":"Andrew Lilley Brinker"},"url":"https://www.possiblerust.com/glossary/","description":"Learning what’s possible in Rust.","@type":"WebPage","@context":"https://schema.org"}</script>
+{"author":{"@type":"Person","name":"Andrew Lilley Brinker"},"url":"https://www.possiblerust.com/glossary/","description":"Learning what’s possible in Rust.","@type":"WebPage","headline":"Glossary","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     </head>
