--- a/unpacking/index.html
+++ b/unpacking/index.html
@@ -37,7 +37,7 @@
 <meta name="twitter:site" content="@possiblerust" />
 <meta name="twitter:creator" content="@alilleybrinker" />
 <script type="application/ld+json">
-{"headline":"Unpacking","author":{"@type":"Person","name":"Andrew Lilley Brinker"},"url":"https://www.possiblerust.com/unpacking/","description":"Learning what’s possible in Rust.","@type":"WebPage","@context":"https://schema.org"}</script>
+{"author":{"@type":"Person","name":"Andrew Lilley Brinker"},"url":"https://www.possiblerust.com/unpacking/","description":"Learning what’s possible in Rust.","@type":"WebPage","headline":"Unpacking","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     </head>
